# Gallery-View

./: README.md  gradle.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: lottie.json
app/src/main/cpp/: CMakeLists.txt  galleryview.cpp
app/src/main/cpp/fftools/: cmdutils.c  ffmpeg.c
app/src/main/cpp/include/: cmdutils.h  ffmpeg.h
app/src/main/cpp/include/x86_64/libavutil/: ffversion.h
app/src/main/cpp/lib/x86_64/: libx264.so.164
app/src/main/java/com/example/galleryview/: BigPictureActivity.java  FullScreenVideoAdapter.java  GalleryItem.java  HttpUtils.java  ItemAdapter.java  ItemTouchHelperAdapter.java  MainActivity.java  MyActivity.java  MyDatabaseHelper.java  MyItemTouchHelperCallBack.java  SwipeVideoPlayActivity.java  VideoController.java  VideoEditorActivity.java  onDoubleClickListener.java
app/src/main/java/com/example/galleryview/dao/: AppDatabase.java  HiddenVideo.java  LabelRecord.java  PrivateVideo.java  Video.java  VideoBookDao.java
app/src/main/java/com/example/galleryview/database/: AppDatabase.java  GalleryItem.java  LabelRecord.java  PrivateVideo.java  Video.java  VideoBookDao.java
app/src/main/java/com/example/galleryview/gallerypage/: ItemAdapter.java  ItemTouchHelperAdapter.java  MainActivity.java  MainActivityInterface.java  MainActivityPresenter.java  MyItemTouchHelperCallBack.java
app/src/main/java/com/example/galleryview/model/: DatabaseUtils.java  FFmpegUtils.java  GalleryItem.java  HttpUtils.java  MyActivity.java  MyDatabaseHelper.java  PhotoSelector.java  VideoProcessor.java
app/src/main/java/com/example/galleryview/presenter/: GalleryItem.java  MainActivityInterface.java  MainActivityPresenter.java  SwipeVideoPlayInterface.java  SwipeVideoPlayPresenter.java  VideoController.java  VideoEditorPresenter.java
app/src/main/java/com/example/galleryview/ui/: FullScreenVideoAdapter.java  ItemAdapter.java  ItemTouchHelperAdapter.java  MainActivityInterface.java  MyItemTouchHelperCallBack.java  SwipeVideoPlayInterface.java  VideoController.java  VideoEditorInterface.java  onDoubleClickListener.java
app/src/main/java/com/example/galleryview/videoeditor/: VideoEditorActivity.java  VideoEditorInterface.java  VideoEditorPresenter.java
app/src/main/java/com/example/galleryview/videoplay/: FullScreenVideoAdapter.java  SwipeVideoPlayActivity.java  SwipeVideoPlayInterface.java  SwipeVideoPlayPresenter.java  VideoController.java  onDoubleClickListener.java
app/src/main/res/drawable/: round_smart_display_24.xml
app/src/main/res/layout/: activity_big_pigture.xml  activity_main.xml  activity_swipe_video_play.xml  activity_video_editor.xml  custom_player_control_view.xml  exo_player_control_view.xml  gallery_item.xml  password.xml  video_item.xml
app/src/main/res/values/: strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
